...
                }
                // We want to allow QR code scanning in this screen because its common for web apps to offer a QR code to request an address from the wallet
                IconTextButton(icon = Icons.Outlined.QrCodeScanner, modifier = Modifier.weight(1f), description = i18n(S.scanQr), color = wallyPurple) {
                    clearAlerts()
                    isScanningQr = true
                }
                IconTextButton(icon = Icons.AutoMirrored.Outlined.ArrowBack, modifier = Modifier.weight(1f).testTag("BackButton"), description = i18n(S.Back), color = wallyPurple, ) {
                    nav.back()
                }
            }
    }
    if (isScanningQr && platform().hasQrScanner)
        {
...
              contentDescription = "QR Code",
              modifier = Modifier
                .padding(32.dp)  // Some QR readers can't handle a QR code without at least some white border (and yes this is actually to the spec)
                .weight(1f) // Take remaining space, but allow other components to take their intrinsic size
                .aspectRatio(1f) // Keeps the image square
                .background(Color.White)  // QR codes MUST have a white background and darker pixels, NOT the opposite (and yes this is to the spec)
                .testTag("qrcode")
                .clickable { onCopyToClipBoardText(addrStr) }
            )
            Spacer(modifier = Modifier.weight(0.1f))
            Text(
              text = i18n(S.YourAddress) % mapOf("blockchain" to (chainToURI[address.chainSelector] ?: "")),
              style = MaterialTheme.typography.headlineSmall
            )
            Text(
              text = addrStr,
              style = MaterialTheme.typography.bodyLarge,
              textAlign = TextAlign.Center,
              modifier = Modifier.fillMaxWidth(0.8f).clickable { onCopyToClipBoardText(addrStr) }.testTag("receiveScreen:receiveAddress")
            )
            if (devMode)
            {
                Spacer(modifier = Modifier.weight(0.1f))
                // Dev mode so don't need i18n
                CenteredText(text = "Providing address ${address.index}", textStyle = MaterialTheme.typography.bodySmall)
...
