...
      },
      headlineContent = {
          // Account name and Nexa amount
          Column {
              // Account Name
              Row(verticalAlignment = Alignment.CenterVertically, modifier = Modifier.fillMaxWidth()) {
                  Text(text = uidata.account.name, fontSize = 16.sp, fontWeight = FontWeight.Bold, modifier = Modifier.testTag("CarouselAccountName"))
              }
              // Nexa Amount
              Row(horizontalArrangement = Arrangement.SpaceBetween, verticalAlignment = Alignment.CenterVertically, modifier = Modifier.fillMaxWidth()) {
                  val startingBalStyle = FontScaleStyle(1.75)
                  val startingCcStyle = FontScaleStyle(0.6)
                  var balTextStyle by remember { mutableStateOf(startingBalStyle) }
...
